--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -177,9 +177,9 @@ RUN  if [ "${ARCH}" == "s390x" ]; then \
       chmod +x /usr/bin/kubectl; \
      fi
 
-ENV CATTLE_UI_VERSION 2.6.5
-ENV CATTLE_DASHBOARD_UI_VERSION v2.6.5
-ENV CATTLE_CLI_VERSION v2.6.5
+ENV CATTLE_UI_VERSION 2.6.6-rc1
+ENV CATTLE_DASHBOARD_UI_VERSION v2.6.6-rc1
+ENV CATTLE_CLI_VERSION v2.6.6-rc4
 
 # Please update the api-ui-version in pkg/settings/settings.go when updating the version here.
 ENV CATTLE_API_UI_VERSION 1.1.9
