Add helm v2 to s390x arch

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -2,7 +2,7 @@ FROM registry.suse.com/bci/golang:1.17
 
 ARG DAPPER_HOST_ARCH
 ENV HOST_ARCH=${DAPPER_HOST_ARCH} ARCH=${DAPPER_HOST_ARCH}
-ENV CATTLE_HELM_VERSION v2.16.8-rancher1
+ENV CATTLE_HELM_VERSION v2.16.8-rancher2
 ENV CATTLE_MACHINE_VERSION v0.15.0-rancher88
 ENV CATTLE_K3S_VERSION v1.24.2+k3s1
 # version used by helm plugin install script
@@ -29,25 +29,25 @@ RUN if [ "${ARCH}" == "amd64" ]; then \
 
 ENV HELM_URL_V2_amd64=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-helm \
     HELM_URL_V2_arm64=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-helm-arm64 \
+    HELM_URL_V2_s390x=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-helm-s390x \
     HELM_URL_V2=HELM_URL_V2_${ARCH} \
     HELM_URL_V3=https://get.helm.sh/helm-${HELM_VERSION}-linux-${ARCH}.tar.gz \
     TILLER_URL_amd64=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-tiller \
     TILLER_URL_arm64=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-tiller-arm64 \
+    TILLER_URL_s390x=https://github.com/rancher/helm/releases/download/${CATTLE_HELM_VERSION}/rancher-tiller-s390x \
     TILLER_URL=TILLER_URL_${ARCH} \
     KUSTOMIZE_URL=https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/${KUSTOMIZE_VERSION}/kustomize_${KUSTOMIZE_VERSION}_linux_${ARCH}.tar.gz
 
 RUN curl -sLf ${KUSTOMIZE_URL} | tar -xzf - -C /usr/bin
 
-# set up helm 2 to all archs other than s390x
-RUN if [ "${ARCH}" != "s390x" ]; then \
-        curl -sLf ${!HELM_URL_V2} -o /usr/bin/rancher-helm && \
-        curl -sLf ${!TILLER_URL} -o /usr/bin/rancher-tiller && \
-        chmod +x /usr/bin/rancher-helm /usr/bin/rancher-tiller && \
-        ln -s /usr/bin/rancher-helm /usr/bin/helm && \
-        ln -s /usr/bin/rancher-tiller /usr/bin/tiller && \
-        helm init -c --stable-repo-url https://charts.helm.sh/stable/ && \
-        helm plugin install https://github.com/rancher/helm-unittest; \
-    fi
+# set up helm 2
+RUN curl -sLf ${!HELM_URL_V2} -o /usr/bin/rancher-helm && \
+    curl -sLf ${!TILLER_URL} -o /usr/bin/rancher-tiller && \
+    chmod +x /usr/bin/rancher-helm /usr/bin/rancher-tiller && \
+    ln -s /usr/bin/rancher-helm /usr/bin/helm && \
+    ln -s /usr/bin/rancher-tiller /usr/bin/tiller && \
+    helm init -c --stable-repo-url https://charts.helm.sh/stable/ && \
+    helm plugin install https://github.com/rancher/helm-unittest
 
 # set up helm 3
 RUN mkdir /usr/tmp && \
