--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -29,7 +29,8 @@ ENV KUSTOMIZE_VERSION v4.4.1
 ENV CATTLE_KDM_BRANCH=dev-v2.6
 
 RUN zypper -n install gcc binutils glibc-devel-static ca-certificates git-core wget curl unzip tar vim less file xz gzip sed gawk iproute2 iptables jq
-RUN zypper install -y -f docker
+# use containerd from k3s image, not from bci
+RUN zypper install -y -f docker && rpm -e --nodeps --noscripts containerd
 
 RUN curl -sLf https://github.com/rancher/machine/releases/download/${CATTLE_MACHINE_VERSION}/rancher-machine-${ARCH}.tar.gz | tar xvzf - -C /usr/bin
 
