Also scope stage-binaries to branch/tags in Drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -129,6 +129,13 @@ steps:
   commands:
   - "cp -r ./bin/* ./package/"
   when:
+    instance:
+      - drone-publish.rancher.io
+    ref:
+      include:
+        - "refs/heads/master"
+        - "refs/heads/release/v*"
+        - "refs/tags/v*"
     event:
     - push
     - tag
@@ -406,6 +413,13 @@ steps:
   commands:
   - "cp -r ./bin/* ./package/"
   when:
+    instance:
+      - drone-publish.rancher.io
+    ref:
+      include:
+        - "refs/heads/master"
+        - "refs/heads/release/v*"
+        - "refs/tags/v*"
     event:
     - push
     - tag
@@ -618,6 +632,13 @@ steps:
   commands:
   - "cp -r ./bin/* ./package/"
   when:
+    instance:
+      - drone-publish.rancher.io
+    ref:
+      include:
+        - "refs/heads/master"
+        - "refs/heads/release/v*"
+        - "refs/tags/v*"
     event:
     - push
     - tag
@@ -840,6 +861,13 @@ steps:
     commands:
       - "cp -r ./bin/* ./package/windows/"
     when:
+      instance:
+        - drone-publish.rancher.io
+      ref:
+        include:
+          - "refs/heads/master"
+          - "refs/heads/release/v*"
+          - "refs/tags/v*"
       event:
         - push
         - tag
@@ -961,6 +989,13 @@ steps:
     commands:
       - "cp -r ./bin/* ./package/windows/"
     when:
+      instance:
+        - drone-publish.rancher.io
+      ref:
+        include:
+          - "refs/heads/master"
+          - "refs/heads/release/v*"
+          - "refs/tags/v*"
       event:
         - push
         - tag
