Update k3s hardened install to be in line with docs
Signed-off-by: rancher-max <max.ross@suse.com>

--- a/tests/validation/tests/v3_api/resource/terraform/k3s/master/cis_masterconfig.yaml
+++ b/tests/validation/tests/v3_api/resource/terraform/k3s/master/cis_masterconfig.yaml
@@ -1,6 +1,7 @@
 secrets-encryption: true
 kube-apiserver-arg:
-  - 'audit-log-path=/var/lib/rancher/k3s/server/logs/audit-log'
+  - 'audit-log-path=/var/lib/rancher/k3s/server/logs/audit.log'
+  - 'audit-policy-file=/var/lib/rancher/k3s/server/audit.yaml'
   - 'audit-log-maxage=30'
   - 'audit-log-maxbackup=10'
   - 'audit-log-maxsize=100'
