Do not fail on release image check

--- a/.drone.yml
+++ b/.drone.yml
@@ -360,6 +360,7 @@ steps:
 
 - name: check-release-images-exists
   image: rancher/dapper:v0.5.8
+  failure: ignore
   commands:
   - dapper check-release-images-exist
   privileged: true
