--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -53,7 +53,7 @@ ENV CATTLE_SYSTEM_AGENT_UPGRADE_IMAGE rancher/system-agent:${CATTLE_SYSTEM_AGENT
 ENV CATTLE_SYSTEM_UPGRADE_CONTROLLER_CHART_VERSION 100.0.2+up0.3.2
 
 # System charts minimal version
-ENV CATTLE_FLEET_MIN_VERSION=100.0.4+up0.3.10-rc5
+ENV CATTLE_FLEET_MIN_VERSION=100.0.4+up0.3.10
 ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=1.0.5+up0.2.6
 ENV CATTLE_CSP_ADAPTER_MIN_VERSION=1.0.0
 
