Add GKE tests, test files, and mock structures

--- a/pkg/controllers/management/aks/test/onclusterchange_create.yaml
+++ b/pkg/controllers/management/aks/test/onclusterchange_create.yaml
@@ -88,7 +88,7 @@ status:
     privateRequiresTunnel: null
     rbacEnabled: null
     upstreamSpec:
-      mockTestField: "upstreamSpec is already set"
+      testField: "upstreamSpec is already set"
   allocatable:
     cpu: "0"
     memory: "0"
