--- a/.github/workflows/replace-env-value.yml
+++ b/.github/workflows/replace-env-value.yml
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git checkout -b "$BRANCH"
-          git commit -a -m "change env var ${INPUT_ENVVAR} to ${INPUT_ENVVALUE} [CI SKIP]"
+          git commit -a -m "change env var ${INPUT_ENVVAR} to ${INPUT_ENVVALUE}"
           git push origin "$BRANCH"
       - name: Create Pull Request
         if: ${{ env.changes_exist == 'true' }}
