feat: Allows configuration of the 'type' used in Service
* Defaults to the standard ClusterIP
* Allows user to override with NodePort or LoadBalancer
* Allows user to customise service with provided annotations
* Chart docs have been updated
* This allows smooth running on GKE clusters using static IP addresses and Google managed certificates

Fixes issue: https://github.com/rancher/rancher/issues/16061

--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -5,6 +5,12 @@ metadata:
   labels:
 {{ include "rancher.labels" . | indent 4 }}
 spec:
+  {{- /*
+  If service.type is not provided this attribute is ommitted and k8s default of ClusterIP is used.
+  */}} 
+  {{- if .Values.service.type }}
+  type: {{ .Values.service.type }}
+  {{- end }}
   ports:
   - port: 80
     targetPort: 80
