--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -71,6 +71,11 @@ ingress:
     source: rancher
     secretName: tls-rancher-ingress
 
+### service ###
+# Override to use NodePort or LoadBalancer service type - default is ClusterIP
+# service:
+#   type: NodePort
+
 ### LetsEncrypt config ###
 # ProTip: The production environment only allows you to register a name 5 times a week.
 #         Use staging until you have your config right.
